# hack23-1

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  config.py  runserver.py
api/database/: models.py
api/migrations/: env.py
api/migrations/versions/: 2ffb146477b3_update_user_model.py  6c69a7cb8594_add_refrest_token_system.py  947c55205a01_init.py  b99f25bba66e_add_expedition_field_to_user_model.py
api/src/: app.py  auth.py  driver.py  packer.py  user.py  utils.py
database/: Dockerfile  database.py  models.py
src/: auth.py  malfunc.py
task/: Бланк кейса 2 Рочин.docx  График работы.xlsx  Продукт 1 набор данных 01.12-27.12.xlsx
